--- a/app/src/main/res/xml/pref_theme.xml
+++ b/app/src/main/res/xml/pref_theme.xml
@@ -19,6 +19,12 @@
 
     </PreferenceCategory>
 
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="colored_toolbar"
+        android:title="@string/pref_colored_toolbar_title" />
+
+
     <Preference
         android:title="Icon Demo"
         android:key="iconDemo"
