--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -52,6 +52,7 @@
                 android:textColor="@android:color/background_dark"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                app:layout_constraintRight_toLeftOf="@+id/clearList"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <LinearLayout
