--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -106,6 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
+                android:paddingBottom="4dp"
                 android:paddingStart="8dp"
                 android:paddingTop="4dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +164,6 @@
                 android:id="@+id/timeDivider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="4dp"
                 android:background="?android:attr/listDivider"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tagOnTaskLayout" />
