--- a/app/src/main/res/layout/content_create_tag.xml
+++ b/app/src/main/res/layout/content_create_tag.xml
@@ -12,8 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,87 +29,6 @@
                 android:layout_margin="16dp"
                 android:hint="Tag Name" />
         </LinearLayout>
-
-
-        <!--<LinearLayout
-            android:id="@+id/redLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="1"
-                android:text="Red:"
-                android:textSize="18sp" />
-
-            <EditText
-                android:id="@+id/editTextred"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="number" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/greenLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textViewgreen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="1"
-                android:text="Green:"
-                android:textSize="18sp" />
-
-            <EditText
-                android:id="@+id/editTextgreen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="number" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/blueLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textViewblue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="1"
-                android:text="Blue:"
-                android:textSize="18sp" />
-
-            <EditText
-                android:id="@+id/editTextblue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="number" />
-        </LinearLayout>-->
-
-
-        <!--<com.jaredrummler.android.colorpicker.ColorPreference
-            android:defaultValue="@color/colorAccent"
-            android:key="default_color"
-            android:summary="@string/color_default_summary"
-            android:title="@string/color_default_title"/>-->
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/colorPreviewLayout"
@@ -127,7 +47,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tagColorText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="16dp"
@@ -136,5 +56,12 @@
                 app:layout_constraintLeft_toRightOf="@+id/tagColorPreview"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
+
+        <Switch
+            android:id="@+id/subfolderCreateSwitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@string/subfoler_create_text" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
