--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -10,6 +10,10 @@
 
     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="@string/pref_sub_folder_filter_key"
+        android:title="@string/subfolder_filter_check_title" />
     <EditTextPreference
         android:id="@+id/user_name"
         android:capitalize="words"
