--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -54,7 +54,7 @@
                         android:background="?android:attr/selectableItemBackground">
 
                         <TextView
-                            android:id="@+id/textView5"
+                            android:id="@+id/browseHeaderText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="16dp"
