--- a/app/src/main/res/drawable/ic_todo_small.xml
+++ b/app/src/main/res/drawable/ic_todo_small.xml
@@ -3,15 +3,25 @@
     android:viewportHeight="192"
     android:viewportWidth="192"
     android:width="192dp"
+    xmlns:aapt="http://schemas.android.com/aapt"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:pathData="M32,20L160,20A12,12 0,0 1,172 32L172,160A12,12 0,0 1,160 172L32,172A12,12 0,0 1,20 160L20,32A12,12 0,0 1,32 20z"></path>
+    <path android:pathData="M32,20h128c6.6,0 12,5.4 12,12v128c0,6.6 -5.4,12 -12,12H32c-6.6,0 -12,-5.4 -12,-12V32C20,25.4 25.4,20 32,20z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:centerX="23.77"
+                android:centerY="23.93"
+                android:gradientRadius="204.62"
+                android:type="radial">
+                <item
+                    android:color="#19FFFFFF"
+                    android:offset="0" />
+                <item
+                    android:color="#00FFFFFF"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
     <path
         android:fillColor="#FF000000"
-        android:pathData="M32,20L160,20A12,12 0,0 1,172 32L172,160A12,12 0,0 1,160 172L32,172A12,12 0,0 1,20 160L20,32A12,12 0,0 1,32 20z" />
-    <path
-        android:fillColor="#fff"
-        android:pathData="M62,114.72 L51.82,104.56a2.55,2.55 0,0 1,-0.76 -1.84,2.44 2.44,0 0,1 0.72,-1.85l9.29,-9.28a2.37,2.37 0,0 1,1.84 -0.72,2.59 2.59,0 0,1 1.85,0.76l10.15,10.16a2.51,2.51 0,0 1,0.74 2.3L74,113.81l-9.72,1.65A2.51,2.51 0,0 1,62 114.72Z" />
-    <path
-        android:fillColor="#fff"
-        android:pathData="M70.282,117.802L126.837,61.248A3.99,3.99 90,0 1,132.48 61.248L139.77,68.538A3.99,3.99 90,0 1,139.77 74.181L83.215,130.735A3.99,3.99 90,0 1,77.573 130.735L70.282,123.445A3.99,3.99 90,0 1,70.282 117.802z" />
+        android:pathData="M160,20H32c-6.6,0 -12,5.4 -12,12v128c0,6.6 5.4,12 12,12h128c6.6,0 12,-5.4 12,-12V32C172,25.4 166.6,20 160,20zM62,114.7l-10.2,-10.2c-0.5,-0.5 -0.8,-1.1 -0.8,-1.8c0,-0.7 0.2,-1.4 0.7,-1.8l9.3,-9.3c0.5,-0.5 1.2,-0.8 1.8,-0.7c0.7,0 1.4,0.3 1.8,0.8l10.2,10.2c0.6,0.6 0.9,1.5 0.7,2.3l-1.7,9.7l-9.7,1.7C63.4,115.6 62.6,115.3 62,114.7zM139.8,74.2l-56.6,56.6c-1.6,1.6 -4.1,1.6 -5.6,0l-7.3,-7.3c-1.6,-1.6 -1.6,-4.1 0,-5.6l56.6,-56.6c1.6,-1.6 4.1,-1.6 5.6,0l7.3,7.3C141.3,70.1 141.3,72.6 139.8,74.2z" />
 </vector>
