--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -179,7 +179,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/timeDivider">
 
                 <TextView
-                    android:id="@+id/dateTimeInboxText"
+                    android:id="@+id/dateInboxText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Put Date"
@@ -187,14 +187,24 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <TextView
+                    android:id="@+id/timeInboxText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="16dp"
+                    android:text="Put Time"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toLeftOf="@+id/timeIcon"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <ImageView
                     android:id="@+id/timeIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingEnd="16dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/dateTimeInboxText"
+                    app:layout_constraintBottom_toBottomOf="@+id/dateInboxText"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/dateTimeInboxText"
+                    app:layout_constraintTop_toTopOf="@+id/dateInboxText"
                     app:srcCompat="@drawable/ic_access_time_black_24dp" />
             </android.support.constraint.ConstraintLayout>
         </android.support.constraint.ConstraintLayout>
