--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -24,28 +24,22 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
+                android:focusableInTouchMode="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:focusableInTouchMode="true">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content">
 
-                    <android.support.constraint.ConstraintLayout
-                        android:id="@+id/tagRecyclerViewHolder"
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/browseTagRecycler"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/browseCardHeader" />
 
-                        app:layout_constraintTop_toBottomOf="@+id/browseCardHeader">
-
-                        <android.support.v7.widget.RecyclerView
-                            android:id="@+id/browseTagRecycler"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-                    </android.support.constraint.ConstraintLayout>
 
                     <android.support.constraint.ConstraintLayout
                         android:id="@+id/browseCardHeader"
