--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical|center_horizontal"
-        android:text="No Tasks Left!"
+        android:text="@string/no_remaining_tasks"
         android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
