--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -30,6 +30,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <android.support.constraint.ConstraintLayout
+                    android:id="@+id/tagCardLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
