--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="colorDarkPrimary">#1f1f1f</color>
     <color name="colorDarkPrimaryDark">#141414</color>
 
+    <color name="launch">#888888</color>
+
 </resources>
