--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -86,6 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:layoutAnimation="@anim/rv_slide_from_bottom_layout_anim"
                 app:layout_constraintTop_toBottomOf="@+id/browseTagCardHolder" />
 
         </android.support.constraint.ConstraintLayout>
