--- a/app/src/main/res/layout/activity_create_tag.xml
+++ b/app/src/main/res/layout/activity_create_tag.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".createTag">
+    tools:context=".CreateTag">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
