--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,81 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:elevation="0dp">
+    <include
+        layout="@layout/content_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-        <android.support.v7.widget.Toolbar
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:theme="@style/ToolBarStyle"
-            app:popupTheme="@style/AppThemeLight.NoActionBar" />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_main" />
+            android:layout_gravity="bottom"
+            android:theme="@style/Base.Theme.MaterialComponents"
+            app:backgroundTint="@color/colorPrimary"
+            app:fabAlignmentMode="center"
+            app:navigationIcon="@drawable/ic_menu_black_24dp" />
 
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add_black_24dp"
+            app:fabSize="normal"
+            app:layout_anchor="@id/toolbar" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/fab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom|end"
+            android:visibility="gone">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_main"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:srcCompat="@drawable/ic_add_white_24dp" />
 
 
-    <android.support.constraint.ConstraintLayout
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_list"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="@dimen/fab_margin"
+                android:scaleType="center"
+                android:visibility="gone"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toTopOf="@+id/fab_main"
+                app:layout_constraintLeft_toLeftOf="@+id/fab_main"
+                app:layout_constraintRight_toRightOf="@+id/fab_main"
+                app:srcCompat="@drawable/ic_edit_white_24dp" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_tag"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom|center"
+                android:layout_margin="@dimen/fab_margin"
+                android:scaleType="center"
+                android:tint="@android:color/white"
+                android:visibility="gone"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toTopOf="@+id/fab_list"
+                app:layout_constraintLeft_toLeftOf="@+id/fab_list"
+                app:layout_constraintRight_toRightOf="@+id/fab_list"
+                app:srcCompat="@drawable/ic_label_black_24dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fab_layout"
-        android:layout_gravity="bottom|end">
+        tools:context=".MainActivity">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_main"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:fabSize="normal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:srcCompat="@drawable/ic_add_white_24dp" />
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:navigationIcon="@drawable/ic_menu_24"
+            app:elevation="0dp"/>
 
+            &lt;!&ndash;<androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:theme="@style/ToolBarStyle"
+                app:popupTheme="@style/AppThemeLight.NoActionBar" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_list"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="@dimen/fab_margin"
-            android:scaleType="center"
-            android:visibility="gone"
-            app:fabSize="normal"
-            app:layout_constraintBottom_toTopOf="@+id/fab_main"
-            app:layout_constraintLeft_toLeftOf="@+id/fab_main"
-            app:layout_constraintRight_toRightOf="@+id/fab_main"
-            app:srcCompat="@drawable/ic_edit_white_24dp" />
+        </com.google.android.material.bottomappbar.BottomAppBar>&ndash;&gt;
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_tag"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="bottom|center"
-            android:layout_margin="@dimen/fab_margin"
-            android:scaleType="center"
-            android:tint="@android:color/white"
-            android:visibility="gone"
-            app:fabSize="normal"
-            app:layout_constraintBottom_toTopOf="@+id/fab_list"
-            app:layout_constraintLeft_toLeftOf="@+id/fab_list"
-            app:layout_constraintRight_toRightOf="@+id/fab_list"
-            app:srcCompat="@drawable/ic_label_black_24dp" />
-
-
-    </android.support.constraint.ConstraintLayout>
+        <include layout="@layout/content_main" />
 
 
 
 
-</android.support.design.widget.CoordinatorLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/fab_layout"
+            android:layout_gravity="bottom|end">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_main"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:srcCompat="@drawable/ic_add_white_24dp" />
+
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_list"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="@dimen/fab_margin"
+                android:scaleType="center"
+                android:visibility="gone"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toTopOf="@+id/fab_main"
+                app:layout_constraintLeft_toLeftOf="@+id/fab_main"
+                app:layout_constraintRight_toRightOf="@+id/fab_main"
+                app:srcCompat="@drawable/ic_edit_white_24dp" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_tag"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom|center"
+                android:layout_margin="@dimen/fab_margin"
+                android:scaleType="center"
+                android:tint="@android:color/white"
+                android:visibility="gone"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toTopOf="@+id/fab_list"
+                app:layout_constraintLeft_toLeftOf="@+id/fab_list"
+                app:layout_constraintRight_toRightOf="@+id/fab_list"
+                app:srcCompat="@drawable/ic_label_black_24dp" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
