--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -23,7 +23,7 @@
         android:layout_gravity="center"
         android:visibility="gone" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/inboxRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,6 +32,6 @@
         android:paddingTop="48dp">
 
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
