--- a/app/src/main/res/layout/pref_dialog_time.xml
+++ b/app/src/main/res/layout/pref_dialog_time.xml
@@ -8,7 +8,7 @@
     android:padding="@dimen/alert_def_padding" />
 
 
-    <!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -47,4 +47,4 @@
 
 
 
-    </android.support.constraint.ConstraintLayout>-->
+    </androidx.constraintlayout.widget.ConstraintLayout>-->
