--- a/app/src/main/res/layout/preference_header_list_item.xml
+++ b/app/src/main/res/layout/preference_header_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/prefGeneralLayout"
     android:layout_width="match_parent"
@@ -24,4 +24,4 @@
         app:layout_constraintBottom_toBottomOf="@+id/prefGeneralIcon"
         app:layout_constraintLeft_toRightOf="@+id/prefGeneralIcon"
         app:layout_constraintTop_toTopOf="@+id/prefGeneralIcon" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
