--- a/app/src/main/res/layout/activity_archive.xml
+++ b/app/src/main/res/layout/activity_archive.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Archive">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppThemeLight.NoActionBar">
@@ -19,7 +19,7 @@
             android:theme="@style/ToolBarStyle"
             app:popupTheme="@style/AppThemeLight.NoActionBar" />
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/archiveFragmentContainer"
