--- a/app/src/main/res/layout/activity_create_tag.xml
+++ b/app/src/main/res/layout/activity_create_tag.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".CreateTag">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppThemeLight.NoActionBar">
@@ -18,7 +18,7 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppThemeLight.NoActionBar" />
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_create_tag" />
 
