--- a/app/src/main/res/layout/activity_tag_select.xml
+++ b/app/src/main/res/layout/activity_tag_select.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".TagSelect">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppThemeLight.NoActionBar">
@@ -20,7 +20,7 @@
             app:popupTheme="@style/AppThemeLight.NoActionBar"
             app:title="Select Tag"/>
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_tag_select" />
 
