--- a/app/src/main/res/layout/activity_task_view.xml
+++ b/app/src/main/res/layout/activity_task_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/task_view_parent"
     tools:context=".TaskView">
 
     <com.google.android.material.appbar.AppBarLayout
