--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -55,7 +55,8 @@
     <me.saket.inboxrecyclerview.page.ExpandablePageLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/expandable_page">
+        android:id="@+id/expandable_page"
+        android:elevation="72dp">
         <!--<include
             layout="@layout/activity_task_view"
             android:layout_height="match_parent"
