--- a/app/src/main/res/layout/inbox_tag_list_item.xml
+++ b/app/src/main/res/layout/inbox_tag_list_item.xml
@@ -18,8 +18,12 @@
         android:id="@+id/inbox_item_tag_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:text="Tag Name"
+        android:layout_marginRight="9dp"
+        android:layout_marginBottom="5dp"
+        android:ellipsize="end"
+        android:gravity="right"
+        android:text="Tag Name Really Long"
+        android:textAlignment="gravity"
         app:layout_constraintBottom_toBottomOf="@+id/tagImage"
         app:layout_constraintRight_toLeftOf="@+id/tagImage"
         app:layout_constraintTop_toTopOf="@+id/tagImage" />
