--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -16,43 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/backToInbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="16dp"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_move_to_inbox_black_24dp" />
-
-        <ImageView
-            android:id="@+id/clearList"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:paddingEnd="16dp"
-            android:paddingBottom="16dp"
-            android:visibility="visible"
-            app:layout_constraintRight_toLeftOf="@+id/backToInbox"
-            app:srcCompat="@drawable/ic_done_all_black_24dp" />
-
-        <TextView
-            android:id="@+id/listTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:paddingStart="16dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="12dp"
-            android:text="List Name"
-            android:textColor="@android:color/background_dark"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintRight_toLeftOf="@+id/clearList"
-            app:layout_constraintStart_toStartOf="parent" />
-
         <LinearLayout
             android:id="@+id/tagandtaskholder"
             android:layout_width="match_parent"
@@ -63,28 +26,44 @@
             <LinearLayout
                 android:id="@+id/checklistEncloser"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:paddingStart="4dp"
                 app:layout_constraintTop_toBottomOf="@+id/listTextView"
                 tools:layout_editor_absoluteX="8dp">
 
+                <TextView
+                    android:id="@+id/listTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="16dp"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="12dp"
+                    android:text="List Name"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent" />
+
                 <include
                     android:id="@+id/item1"
                     layout="@layout/inbox_checklist_list_item"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:visibility="visible" />
 
                 <include
                     android:id="@+id/item2"
                     layout="@layout/inbox_checklist_list_item"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:visibility="visible" />
 
                 <include
                     android:id="@+id/item3"
-                    layout="@layout/inbox_checklist_list_item" />
+                    layout="@layout/inbox_checklist_list_item"
+                    android:visibility="visible" />
 
                 <ImageView
                     android:id="@+id/itemsMore"
@@ -98,77 +77,100 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/tagOnTaskLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="16dp"
-                android:layout_weight="2"
-                android:orientation="vertical"
-                android:paddingStart="8dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tagDivider">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
-                <include
-                    android:id="@+id/tag1"
-                    layout="@layout/inbox_tag_list_item"
+                <LinearLayout
+                    android:id="@+id/tagOnTaskLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="0" />
+                    android:layout_weight="2"
+                    android:orientation="vertical"
+                    android:paddingStart="8dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tagDivider">
 
-                <include
-                    android:id="@+id/tag2"
-                    layout="@layout/inbox_tag_list_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="0" />
+                    <include
+                        android:id="@+id/tag1"
+                        layout="@layout/inbox_tag_list_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="0" />
 
-                <include
-                    android:id="@+id/tag3"
-                    layout="@layout/inbox_tag_list_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="0" />
+                    <include
+                        android:id="@+id/tag2"
+                        layout="@layout/inbox_tag_list_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="0" />
 
-                <include
-                    android:id="@+id/tag4"
-                    layout="@layout/inbox_tag_list_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="0" />
+                    <include
+                        android:id="@+id/tag3"
+                        layout="@layout/inbox_tag_list_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="0"
+                        android:visibility="visible" />
 
-                <include
-                    android:id="@+id/tag5"
-                    layout="@layout/inbox_tag_list_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="0" />
+                    <include
+                        android:id="@+id/tag4"
+                        layout="@layout/inbox_tag_list_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="0"
+                        android:visibility="visible" />
 
-                <include
-                    android:id="@+id/tag6"
-                    layout="@layout/inbox_tag_list_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="0" />
+                    <include
+                        android:id="@+id/tag5"
+                        layout="@layout/inbox_tag_list_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="0"
+                        android:visibility="visible" />
+
+                    <include
+                        android:id="@+id/tag6"
+                        layout="@layout/inbox_tag_list_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="0"
+                        android:visibility="visible" />
+
+                    <ImageView
+                        android:id="@+id/tagMore"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:layout_weight="0"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:visibility="gone"
+                        app:srcCompat="@drawable/ic_more_horiz_black_24dp" />
+
+                </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/tagMore"
+                    android:id="@+id/tagMoreHorizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
+                    android:layout_gravity="center_vertical"
                     android:layout_weight="0"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp"
+                    android:paddingRight="4dp"
+                    android:tint="@color/warm_grey"
                     android:visibility="gone"
-                    app:srcCompat="@drawable/ic_more_horiz_black_24dp" />
-
+                    app:srcCompat="@drawable/ic_more_vert_black_24dp" />
             </LinearLayout>
 
         </LinearLayout>
@@ -222,4 +224,4 @@
                 app:srcCompat="@drawable/ic_access_time_black_24dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</androidx.cardview.widget.CardView><!--TODO: add right swipe to archiveview for return to inbox-->
