beginning of redesign

--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -68,6 +68,20 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
+                        <ImageView
+                            android:id="@+id/tagAddButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="16dp"
+                            android:background="?android:attr/selectableItemBackgroundBorderless"
+                            android:rotation="180"
+                            android:src="@drawable/ic_add_black_24dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toStartOf="@id/tagCollapseButton"
+                            tools:layout_editor_absoluteX="328dp" />
+
+
                         <View
                             android:id="@+id/browseDivider"
                             android:layout_width="match_parent"
