--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/inboxCard"
     android:layout_width="match_parent"
 
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="6dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="6dp">
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!--<androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/inboxListBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,64 +19,14 @@
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@+id/listTextView">
 
-            <LinearLayout
-                android:id="@+id/checklistEncloser"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingStart="4dp"
-                app:layout_constraintTop_toBottomOf="@+id/listTextView"
-                tools:layout_editor_absoluteX="8dp">
 
-                <TextView
-                    android:id="@+id/listTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="16dp"
-                    android:paddingTop="16dp"
-                    android:paddingBottom="12dp"
-                    android:text="List Name"
-                    android:textColor="@android:color/background_dark"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <include
-                    android:id="@+id/item1"
-                    layout="@layout/inbox_checklist_list_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="visible" />
-
-                <include
-                    android:id="@+id/item2"
-                    layout="@layout/inbox_checklist_list_item"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="visible" />
-
-                <include
-                    android:id="@+id/item3"
-                    layout="@layout/inbox_checklist_list_item"
-                    android:visibility="visible" />
-
-                <ImageView
-                    android:id="@+id/itemsMore"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="12dp"
-                    android:paddingTop="8dp"
-                    android:paddingBottom="8dp"
-                    android:visibility="gone"
-                    app:srcCompat="@drawable/ic_more_horiz_black_24dp" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
+                android:layout_marginBottom="4dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
@@ -91,8 +37,9 @@
                     android:layout_weight="2"
                     android:orientation="vertical"
                     android:paddingStart="8dp"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
+                    android:paddingTop="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingBottom="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tagDivider">
 
@@ -167,7 +114,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="0"
-                    android:paddingRight="4dp"
                     android:tint="@color/warm_grey"
                     android:visibility="gone"
                     app:srcCompat="@drawable/ic_more_vert_black_24dp" />
@@ -188,6 +134,7 @@
             android:id="@+id/dateTimeInboxLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"
             android:paddingStart="20dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
@@ -223,5 +170,137 @@
                 app:layout_constraintTop_toTopOf="@+id/dateInboxText"
                 app:srcCompat="@drawable/ic_access_time_black_24dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView><!--TODO: add right swipe to archiveview for return to inbox-->
+    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+    <LinearLayout
+        android:id="@+id/task_top_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/sublistIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_weight="0"
+            android:tint="@color/ate_icon_light"
+            android:tintMode="src_atop"
+            app:srcCompat="@drawable/list_dropdown_selector" />
+
+        <TextView
+            android:id="@+id/taskName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_weight="0"
+            android:text="Task Name"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:id="@+id/tagOnTaskLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="8dp"
+            android:orientation="horizontal"
+            android:visibility="visible">
+
+
+            <include
+                android:id="@+id/chip1"
+                layout="@layout/chip_tag"
+                android:layout_width="wrap_content"
+                android:layout_weight="4" />
+
+            <include
+                android:id="@+id/chip2"
+                layout="@layout/chip_tag"
+                android:layout_width="wrap_content"
+                android:layout_weight="1" />
+
+            <include
+                android:id="@+id/chip3"
+                layout="@layout/chip_tag"
+                android:layout_width="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/moreTags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="0"
+                app:srcCompat="@drawable/ic_more_horiz_black_24dp" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/checklistEncloser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="12dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingBottom="8dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/task_top_layout">
+
+        <include
+            android:id="@+id/item1"
+            layout="@layout/inbox_checklist_list_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible" />
+
+        <include
+            android:id="@+id/item2"
+            layout="@layout/inbox_checklist_list_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible" />
+
+        <include
+            android:id="@+id/item3"
+            layout="@layout/inbox_checklist_list_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/itemsMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="12dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_more_horiz_black_24dp" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/list_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout><!--TODO: add right swipe to archiveview for return to inbox-->
