--- a/app/src/main/res/layout/inbox_tag_list_item.xml
+++ b/app/src/main/res/layout/inbox_tag_list_item.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="2dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/tagImage"
@@ -21,6 +20,10 @@
         android:layout_marginRight="8dp"
         android:ellipsize="end"
         android:gravity="right"
+        android:paddingLeft="2dp"
+        android:paddingTop="2dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="2dp"
         android:text="Tag Name"
         android:textAlignment="gravity"
         app:layout_constraintBottom_toBottomOf="@+id/tagImage"
