--- a/app/src/main/res/layout/inbox_divider.xml
+++ b/app/src/main/res/layout/inbox_divider.xml
@@ -2,15 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/dividerColor">
 
     <TextView
         android:id="@+id/dividerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         android:text="DividerName"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
