--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -3,23 +3,23 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="com.andb.apps.todo.SettingsActivity$GeneralPreferenceFragment"
+        android:fragment="com.andb.apps.todo.settings.SettingsActivity$GeneralPreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/pref_header_general"
         />
 
     <header
-        android:fragment="com.andb.apps.todo.SettingsActivity$ThemePreferenceFragment"
+        android:fragment="com.andb.apps.todo.settings.SettingsActivity$ThemePreferenceFragment"
         android:icon="@drawable/ic_palette_black_24dp"
         android:title="@string/pref_header_theme" />
 
     <header
-        android:fragment="com.andb.apps.todo.SettingsActivity$NotificationPreferenceFragment"
+        android:fragment="com.andb.apps.todo.settings.SettingsActivity$NotificationPreferenceFragment"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_notif" />
 
     <header
-        android:fragment="com.andb.apps.todo.SettingsActivity$FolderPreferenceFragment"
+        android:fragment="com.andb.apps.todo.settings.SettingsActivity$FolderPreferenceFragment"
         android:icon="@drawable/ic_folder_black_24dp"
         android:title="@string/pref_header_folder" />
 
